# orders-service

./: Dockerfile  README.md  main.py  orders.db  pyproject.toml
.github/workflows/: ci.yml
labs/lab01_entorno/: .pre-commit-config.yaml  README.md  hello.py  main.py  pyproject.toml
labs/lab02_fundamentos/: README.md  main.py  ordenes.json
labs/lab03_funciones/: README.md  main.py
labs/lab04_objetos/: README.md  main.py
labs/lab05_tipado/: README.md  main.py
labs/lab06_stdlib/: README.md  main.py
labs/lab06_stdlib/datos/: ordenes.csv  ordenes.json
labs/lab07_http/: README.md  main.py
labs/lab08_orm/: README.md  alembic.ini  main.py  orders.db
labs/lab08_orm/migrations/: env.py
labs/lab08_orm/migrations/versions/: 3136600c5802_create_orders_table.py
labs/lab09_fastapi/: README.md  main.py
labs/lab10_testing/: README.md  test_orders.py
src/orders_service/application/: use_cases.py
src/orders_service/domain/: entities.py
src/orders_service/domain/ports/: repository.py
src/orders_service/infrastructure/: api.py  repository.py
tests/: test_orders.py
